apps/rampme/backend/overlays/stage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rampme-backend-stage
  namespace: rampme
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: rampme-api-stage
  hostnames:
    - api-stage.rampme.site
  rules:
    - timeouts:
        request: 0s
      backendRefs:
        - name: rampme-backend-stage
          port: 3000
